--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
 
   <div class="card chop">
-    <img class="img-flex" src="https:placehold.it/320x240" alt="">
+    <img class="img-flex" src="https://placehold.it/320x240" alt="">
     <div class="island">
       <h2 class="card-title peta push-0">Giant Robots</h2>
-      <p>Smashing, crashing bashing all, <br>Giant robots have real gall.</p>
+      <p>Smashing, crashing, bashing all,<br>Giant robots have real gall.</p>
       <a class="btn" href="#">Destroy!</a>
     </div>
   </div>
